--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "build" [
+    {
+      "src": "index.py"
+      "use": "@vercel/python"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
